--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cargo build",
+    "format": "cargo fmt"
   },
   "packageManager": "pnpm@10.28.0"
 }
