chore: add test and release build scripts to package.json for enhanced Rust project workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
+    "test": "cargo test",
     "build": "cargo build",
+    "build:release": "cargo build --release",
     "format": "cargo fmt"
   },
   "packageManager": "pnpm@10.28.0"
