chore: update test command in package.json and configure pnpm in GitHub Actions for improved testing workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "cargo test",
+    "test": "cargo test -- --show-output",
     "build": "cargo build",
     "build:release": "cargo build --release",
     "format": "cargo fmt"
