chore: refactor GitHub Actions workflow to consolidate testing across macOS, Windows, and Ubuntu into a single job with a matrix strategy

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,13 @@ on:
     branches: [master]
 
 jobs:
-  test-macos:
-    name: test macos
-    runs-on: macos-latest
+  test:
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    name: test ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -18,36 +22,8 @@ jobs:
         with:
           node-version: 24
           cache: pnpm
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Run tests
-        run: pnpm test
-  test-windows:
-    name: test windows
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Setup Node
-        uses: actions/setup-node@v6
-        with:
-          node-version: 24
-          cache: pnpm
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Run tests
-        run: pnpm test
-  test-ubuntu:
-    name: test ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Setup Node
-        uses: actions/setup-node@v6
-        with:
-          node-version: 24
-          cache: pnpm
+      - name: Install dependencies
+        run: pnpm install
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       - name: Run tests
