--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "scripts": {
-    "test": "cargo test -- --show-output",
     "build": "cargo build",
     "build:release": "cargo build --release",
-    "format": "cargo fmt"
+    "format": "cargo fmt",
+    "test": "cargo test -- --show-output"
+  },
+  "simple-git-hooks": {
+    "pre-push": "pnpm format"
+  },
+  "dependencies": {
+    "simple-git-hooks": "2.13.1"
   },
   "packageManager": "pnpm@10.28.0"
 }
