chore: rename package from "crate-package-template" to "packageName" and update related metadata in Cargo.toml, Cargo.lock, and README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "crate-package-template"
+name = "packageName"
 version = "0.0.1"
 authors = ["YONGQI <betterhyq@qq.com>"]
 edition = "2024"
 description = "A template for creating a crate package"
 readme = "README.md"
-homepage = "https://github.com/betterhyq/crate-package-template"
-repository = "https://github.com/betterhyq/crate-package-template.git"
+homepage = "https://github.com/betterhyq/packageName"
+repository = "https://github.com/betterhyq/packageName.git"
 license = "MIT"
 keywords = [""]
 categories = ["development-tools"]
