chore: add test coverage script to package.json for enhanced testing capabilities

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build:release": "cargo build --release",
     "format": "cargo fmt",
     "test": "cargo test -- --show-output",
+    "test:coverage": "cargo tarpaulin",
     "start": "node scripts/packageName.mjs"
   },
   "simple-git-hooks": {
