--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -1,10 +1,9 @@
 name: Autofix
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  schedule:
+    - cron: '30 0/4 * * *'
+  workflow_dispatch:
 
 jobs:
   autofmt:
