chore: add linting step to GitHub Actions workflow and update package.json with lint command

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -25,6 +25,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Run Format
         run: pnpm format
+      - name: Run Lint
+        run: pnpm lint
       - name: Global Setup Git
         run: 'git config --global user.email "betterhyq@qq.com"'
       - name: Global Setup Git
