chore: update dependencies in Cargo.toml and Cargo.lock, add logging functionality to lib.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,10 @@ license = "MIT"
 keywords = [""]
 categories = ["development-tools"]
 
+[[bin]]
+name = "packageName"
+path = "src/main.rs"
+
 [dependencies]
+log = "0.4.29"
+env_logger = "0.11"
